--- a/eat.html
+++ b/eat.html
@@ -286,7 +286,12 @@ a:hover.back-to-top {
                     
 
                     <h2 class="mb-4"  id=firstweek>09.22 - 09.29 First Week</h2>
-
+                    <p class="mb-4">This week I created this page on my own to update my progress throughout the semester and as an addition to my 
+                        portfolio website. I looked through all the information on the <a href="https://wp.nyu.edu/ability/">
+                        Ability Project Website</a> and started thinking of ways to improve content as well as the accessility of the site. 
+                        I also read and looked at the videos on<a href="https://www.nyu.edu/life/information-technology/web-and-digital-publishing/digital-publishing/accessibility.html">Digital Accessibility</a> website.
+                </p>
+                    
 
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
