--- a/contact.html
+++ b/contact.html
@@ -240,11 +240,12 @@ a:hover.back-to-top {
                             <li class="media">
                                 <span class="fa-stack">
                                     <span class="fas fa-circle fa-stack-2x"></span>
-                                    <span class="fa-stack-1x"><i class='fas fa-home'></i></span>
+                                    <span class="fa-stack-1x"><i class="fas fa-address-book"></i></span>
                                 </span>
                                 <div class="media-body">
-                                    <h5>Address</h5>
-                                    <p>New York, New York</p>
+                                    <h5>Social Media</h5>
+                                    <p><a href="https://www.linkedin.com/in/taojennyzheng/">LinkedIn</a></p>
+                                    <p><a href="https://www.instagram.com/jennyzwithinzebra/">Instagram</a></p>
                                 </div>
                             </li>
                         </ul>
