--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="main-menu">
         <div class="container">
         <nav class="navbar sticky-top navbar-light navbar-expand-lg">
-            <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" alt="logo"></a>
+            <a class="navbar-brand" href="./index.html"><img src="./img/logo.png" alt="Jenny Zheng's pink and white logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 banner-image">
-                            <img src="./img/banner/banner-image.png" alt="banner=img" class="img-fluid">
+                            <img src="./img/banner/banner-image.png" alt="An illustration of Jenny Zheng sitting in front of the computer with a cup of bubble tea on the side." class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item uiux blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./urban.html"><img src="./img/portfolio/p1.jpg" alt="portfolio 1" style="width:100%; "></a>
+                                <a href="./urban.html"><img src="./img/portfolio/p1.jpg" alt="Portfolio 1-Urban Dictionary" style="width:100%; "></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Urban Dictionary</h4>
@@ -125,7 +125,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item uiux blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./nasa.html"><img src="./img/portfolio/p2.jpg" alt="portfolio 2" style="width:100%"></a>
+                                <a href="./nasa.html"><img src="./img/portfolio/p2.jpg" alt="Portfolio 2-NASA Soundscape" style="width:100%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">NASA Eclipse Soundscape</h4>
@@ -136,7 +136,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item uiux blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./triplan.html"><img src="./img/portfolio/p5.jpg" alt="portfolio 5" style="width:100%"></a>
+                                <a href="./triplan.html"><img src="./img/portfolio/p5.jpg" alt="Portfolio 5-Triplan" style="width:100%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Triplan</h4>
@@ -148,7 +148,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item still blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./dogandponyshow.html"><img src="./img/dogandponyshow/dog and pony4.png" alt="portfolio 4" style="width:90%"></a>
+                                <a href="./dogandponyshow.html"><img src="./img/dogandponyshow/dog and pony4.png" alt="Portfolio 4-dog and pony show" style="width:90%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Dog and Pony Show</h4>
@@ -160,7 +160,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item still blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./lightanightlight.html"><img src="./img/portfolio/p3.jpg" alt="portfolio 3" style="width:100%"></a>
+                                <a href="./lightanightlight.html"><img src="./img/portfolio/p3.jpg" alt="Portfolio 3-Light a night light" style="width:100%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Light a night light</h4>
@@ -185,7 +185,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item motion blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./newwonjo.html"><img src="./img/portfolio/p7.jpg" alt="portfolio 7" style="width:100%"></a>
+                                <a href="./newwonjo.html"><img src="./img/portfolio/p7.jpg" alt="portfolio 7-New Wonjo" style="width:100%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">New Wonjo</h4>
@@ -197,7 +197,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item motion blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./why.html"><img src="./img/portfolio/p8.jpg" alt="portfolio 8" style="width:100%"></a>
+                                <a href="./why.html"><img src="./img/portfolio/p8.jpg" alt="portfolio 8-Why" style="width:100%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Why</h4>
@@ -209,7 +209,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item uiux blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./dystopiatherapy.html"><img src="./img/portfolio/p11.jpg" alt="portfolio 11" style="width:100%"></a>
+                                <a href="./dystopiatherapy.html"><img src="./img/portfolio/p11.jpg" alt="Portfolio 11-Dystopia Therapy" style="width:100%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Dystopia Therapy</h4>
@@ -221,7 +221,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item motion blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./hospitalplaylist.html"><img src="./img/portfolio/p9.jpg" alt="portfolio 9" style="width:100%;"></a>
+                                <a href="./hospitalplaylist.html"><img src="./img/portfolio/p9.jpg" alt="Portfolio 9-Hospital Playlist" style="width:100%;"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Hospital Playlist</h4>
@@ -233,7 +233,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item motion blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./newyorkinterior.html"><img src="./img/portfolio/p10.jpg" alt="portfolio 10" style="width:100%"></a>
+                                <a href="./newyorkinterior.html"><img src="./img/portfolio/p10.jpg" alt="Portfolio 10-New York Interior" style="width:100%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">New York Interior</h4>
@@ -245,7 +245,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 element-item still blogBox moreBox" style="display: none;">
                         <div class="our-project">
                             <div class="img">
-                                <a href="./typeoftypes.html"><img src="./img/flashcards/Artboard 2.png" alt="portfolio 12" style="width:100%"></a>
+                                <a href="./typeoftypes.html"><img src="./img/flashcards/Artboard 2.png" alt="Portfolio 12-Type of Types" style="width:100%"></a>
                             </div>
                             <div class="title py-4">
                                 <h4 class="text-uppercase">Type of Types</h4>
@@ -269,7 +269,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
                         <div class="about-image">
-                            <img src="./img/about-me.png" alt="about me" class="img-fluid">
+                            <img src="./img/about-me.png" alt="A picture of Jenny Zheng with a night view of New York City" class="img-fluid">
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12">
@@ -303,7 +303,7 @@
         <div class="container">
             <div class="">
                 <div class="site-logo text-center py-4">
-                    <a href="#"><img src="./img/logo.png" alt="logo"></a>
+                    <a href="#"><img src="./img/logo.png" alt="Jenny Zheng's pink and white logo"></a>
                 </div>
                 <div class="social text-center">
                     <h5 class="text-uppercase">Connect with me</h5>
