--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
                 </div>
                 <div class="social text-center">
                     <h5 class="text-uppercase">Connect with me</h5>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/jennyzwithinzebra/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/taojennyzheng/"><i class="fab fa-linkedin"></i></a>
                     <a href="#"><i class="fab fa-youtube"></i></a>
                 </div>
                 <div class="copyrights text-center">
