--- a/projects.html
+++ b/projects.html
@@ -137,28 +137,28 @@
     </div>
     <!-- ====================End Main Area===============-->
 
-        <footer class="footer-area">
-            <div class="container">
-                <div class="">
-                    <div class="site-logo text-center py-4">
-                        <a href="#"><img src="./img/logo.png" alt="logo"></a>
-                    </div>
-                    <div class="social text-center">
-                        <h5 class="text-uppercase">Connect with me</h5>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
-                    <div class="copyrights text-center">
-                        <p class="para">
-                            Copyright ©2021 All rights reserved | Made by Jenny with the tutorial from
-                            <a href="#"><span>Daily Tuition</span></a>
-                        </p>
-                    </div>
+    <footer class="footer-area">
+        <div class="container">
+            <div class="">
+                <div class="site-logo text-center py-4">
+                    <a href="#"><img src="./img/logo.png" alt="Jenny Zheng's pink and white logo"></a>
+                </div>
+                <div class="social text-center">
+                    <h5 class="text-uppercase">Connect with me</h5>
+                    <a href="https://www.instagram.com/jennyzwithinzebra/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/taojennyzheng/"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+                <div class="copyrights text-center">
+                    <p class="para">
+                        Copyright ©2021 All rights reserved | Made by Jenny with the tutorial from
+                        <a href="#"><span>Daily Tuition</span></a>
+                    </p>
                 </div>
             </div>
-    
-        </footer>
+        </div>
+
+    </footer>
         <!-- Jquery js file-->
         <script src="js/jquery.3.6.0.js"></script>
         
