--- a/eat.html
+++ b/eat.html
@@ -25,6 +25,10 @@
 	<link href="./pavo/css/styles.css" rel="stylesheet">
 	
 <style>
+
+    p{
+        color: rgb(37, 36, 36);
+    }
     .cards-2 .card .label .best-value {
     position: relative;
 	width: 13.75rem;
@@ -268,7 +272,7 @@ a:hover.back-to-top {
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body">09.29 - 10.06 Second Week</div>
+                            <div class="media-body"><a href="#secondweek">09.29 - 10.06 Second Week</a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
@@ -287,17 +291,34 @@ a:hover.back-to-top {
 
                     <h2 class="mb-4"  id=firstweek>09.22 - 09.29 First Week</h2>
                     <p class="mb-4">This week I created this page on my own to update my progress throughout the semester and as an addition to my 
-                        portfolio website. I looked through all the information on the <a href="https://wp.nyu.edu/ability/">
-                        Ability Project Website</a> and started thinking of ways to improve content as well as the accessility of the site. 
-                        I also read and looked at the videos on<a href="https://www.nyu.edu/life/information-technology/web-and-digital-publishing/digital-publishing/accessibility.html">Digital Accessibility</a> website.
+                        portfolio website. I looked through all the information on the <b><a href="https://wp.nyu.edu/ability/">
+                        Ability Project Website</a></b> and started thinking of ways to improve content as well as the accessility of the site. 
+                        I also read and looked at the videos on the <b><a href="https://www.nyu.edu/life/information-technology/web-and-digital-publishing/digital-publishing/accessibility.html">Digital Accessibility</a></b> website.
                 </p>
-                    
 
+                <h2 class="mb-4"  id=secondweek>09.29 - 10.06 Second Week</h2>
+                <p class="mb-4">This week I watched two videos on the <b><a href="https://www.youtube.com/c/a11ynyc">
+                    Accessibility NYC YouTube Channel</a></b>:</p>
+                    <ul class="list-unstyled li-space-lg mb-4">
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">1. <b><a href="https://www.youtube.com/watch?v=NkJ5krn0_tk&t=21">Designing for Assistive Tech in Adobe XD</a></b>- Cameron Cundiff</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">2. <b><a href="https://www.youtube.com/watch?v=HwxJe-LnuhU">Designing With Accessibility in Mind</a></b>- Regine Gilbert</div>
+                        </li>
+                    </ul>
+                <p class="mb-4">and also a video from Sparbox called <b><a href="https://www.youtube.com/watch?v=RjpvOqZigao">Understanding Accessibility: WCAG’s 13 Guidelines with Kasey Bonifacio</a></b>
+                    which is a brief introduction to WCAG 2.1. The presenter talked about the overall structure of WCAG and brokedown the four principles (perceivable, operable, understandable, and robust) within the 13 guidelines. 
+                    I think this is good starting point for me to look more into WCAG in the following weeks.
+                </p>    
+            <p class="mb-4" style="text-align: center;color: rgb(96, 117, 131);">To be continued...</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
     </div> <!-- end of ex-basic-1 -->
-    <!-- end of basic -->
+    <!-- end of basic --> 
 
 
     <!-- Related area-->
