--- a/eat.html
+++ b/eat.html
@@ -276,7 +276,7 @@ a:hover.back-to-top {
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body">10.06 - 10.13 Third Week</div>
+                            <div class="media-body"><a href="#thirdweek">10.06 - 10.13 Third Week</a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
@@ -313,6 +313,55 @@ a:hover.back-to-top {
                     which is a brief introduction to WCAG 2.1. The presenter talked about the overall structure of WCAG and brokedown the four principles (perceivable, operable, understandable, and robust) within the 13 guidelines. 
                     I think this is good starting point for me to look more into WCAG in the following weeks.
                 </p>    
+
+                <h2 class="mb-4"  id=thirdweek>10.06 - 10.13 Third Week</h2>
+                <p class="mb-4">This week I continued my learning on WCAG 2.1 following the <b><a href="http://a11ycalendar.kaseybon.com/">
+                    13 DAYS OF ACCESSIBILITY</a></b> website and completed the following areas:</p>
+                    <ul class="list-unstyled li-space-lg mb-4">
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">1. Text Alternatives</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">2. Time-based Media</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">3. Adaptable</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">4. Distinguishable</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">5. Keyboard Accessible</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">6. Enough Time</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">7. Seizures and Physical Reactions</div>
+                        </li>
+                    </ul>
+                <p class="mb-4">In order to try to feel and understand from the perspectives 
+                    of people with disabilities and how assistive technology like 
+                    captions and audio descriptions are important in accessible designs, I watched an episode on Netflix:</p> 
+                <ul class="list-unstyled li-space-lg mb-4">
+                    <li class="media">
+                        <i class="fas fa-square"></i>
+                        <div class="media-body">first half: eyes closed and the audio description on</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas fa-square"></i>
+                        <div class="media-body">second half: sound muted with subtitles on.</div>
+                    </li>
+                </ul>
+                 <p class="mb-4">Moreover, I watched a very insightful and inspiring Ted Talk called <b><a href="https://www.youtube.com/watch?v=Wb2X9kYEvXc">Creating an Accessible Digital Future</a></b> by Judy Brewer.</p>
+
             <p class="mb-4" style="text-align: center;color: rgb(96, 117, 131);">To be continued...</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
