--- a/eat.html
+++ b/eat.html
@@ -280,7 +280,15 @@ a:hover.back-to-top {
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body">10.13 - 10.20 Fourth Week</div>
+                            <div class="media-body"><a href="#fourthweek">10.13 - 10.20 Fourth Week</a></div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body"><a href="#fifthweek">10.20 - 10.27 Fifth Week</a></div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body"><a href="#sixthweek">10.27 - 11.03 Sixth Week</a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
@@ -362,6 +370,75 @@ a:hover.back-to-top {
                 </ul>
                  <p class="mb-4">Moreover, I watched a very insightful and inspiring Ted Talk called <b><a href="https://www.youtube.com/watch?v=Wb2X9kYEvXc">Creating an Accessible Digital Future</a></b> by Judy Brewer.</p>
 
+
+                 <h2 class="mb-4"  id=fourthweek>10.13 - 10.20 Fourth Week</h2>
+                <p class="mb-4">This week I started to work on the <b>Repository of student work</b> on the Ability Project Website. Below are the list of things I will work on for the following weeks:</p>
+                    <ul class="list-unstyled li-space-lg mb-4">
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">1. MS Thesis</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">2. Undergrad work</div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">3. Create VIP page</div>
+                        </li>
+                    </ul>
+                <p class="mb-4"> I started with IDM students first and looked at the <a href="http://idm.show/S2021/index.html">IDM Spring 2021 Showcase</a> website.</p> 
+                <ul class="list-unstyled li-space-lg mb-4">
+                    <li class="media">
+                        <i class="fas fa-square"></i>
+                        <div class="media-body">Question: Which students' work will be on our page?</div>
+                    </li>
+                    <li class="media">
+                        <i class="fas fa-square"></i>
+                        <div class="media-body">Things to think about: What are the key features for each project? How can the website be more accessible?</div>
+                    </li>
+                </ul>
+                 
+                 <h2 class="mb-4"  id=fifthweek>10.20 - 10.27 Fifth Week</h2>
+                <p class="mb-4">This week I did not do much because of midterms. I looked into the projects of the list of students Amy provided last week</p>
+                    <ul class="list-unstyled li-space-lg mb-4">
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">1.  <a href="http://idm.show/S2021/index.html?cat=item&id=cg3541">Caitlin Gebhard (showcase)</a> </div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">2. <a href="http://idm.show/S2021/index.html?cat=item&id=sa5660">Saki Asakawa (showcase)</a></div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body">3. <a href="http://idm.show/S2021/index.html?cat=item&id=ko1055">Keita Ohshiro (showcase)</a></div>
+                        </li>
+                    </ul>
+                 <p class="mb-4">I also came up with a list of questions and sent them to Amy through slack. Hopefully we can talk about them next week.</p>
+
+                 <h2 class="mb-4"  id=sixthweek>10.27 - 11.03 Sixh Week</h2>
+                 <p class="mb-4">This week I tried to find the projects from the former students at ITP that should appear on our website. </p>
+                     <ul class="list-unstyled li-space-lg mb-4">
+                         <li class="media">
+                             <i class="fas fa-square"></i>
+                             <div class="media-body">1. <a href="https://vimeo.com/551777120">Themis Garcia (vimeo)</a></div>
+                         </li>
+                         <li class="media">
+                             <i class="fas fa-square"></i>
+                             <div class="media-body">2. <a href="http://veronica-alfaro.com/">Veronica Alfaro-Arias (need to find project page)</a></div>
+                         </li>
+                         <li class="media">
+                             <i class="fas fa-square"></i>
+                             <div class="media-body">3.  <a href="https://vimeo.com/425307637">Antiono Guimaraes (vimeo)</a></div>
+                         </li>
+                         <li class="media">
+                             <i class="fas fa-square"></i>
+                             <div class="media-body">4. <a href="https://vimeo.com/336817936">Lauren Race (vimeo)</a></div>
+                         </li>
+                     </ul>
+                  <p class="mb-4">After gathering the list and looking into each and every project, my next step will be to start mapping out the repository website's wireframes and take it from there.</p>
+ 
             <p class="mb-4" style="text-align: center;color: rgb(96, 117, 131);">To be continued...</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
