--- a/eat.html
+++ b/eat.html
@@ -417,7 +417,7 @@ a:hover.back-to-top {
                     </ul>
                  <p class="mb-4">I also came up with a list of questions and sent them to Amy through slack. Hopefully we can talk about them next week.</p>
 
-                 <h2 class="mb-4"  id=sixthweek>10.27 - 11.03 Sixh Week</h2>
+                 <h2 class="mb-4"  id=sixthweek>10.27 - 11.03 Sixth Week</h2>
                  <p class="mb-4">This week I tried to find the projects from the former students at ITP that should appear on our website. </p>
                      <ul class="list-unstyled li-space-lg mb-4">
                          <li class="media">
