--- a/eat.html
+++ b/eat.html
@@ -426,7 +426,7 @@ a:hover.back-to-top {
                          </li>
                          <li class="media">
                              <i class="fas fa-square"></i>
-                             <div class="media-body">2. <a href="http://veronica-alfaro.com/">Veronica Alfaro-Arias (need to find project page)</a></div>
+                             <div class="media-body">2. <a href="https://vimeo.com/425759121">Veronica Alfaro-Arias (vimeo)</a></div>
                          </li>
                          <li class="media">
                              <i class="fas fa-square"></i>
