--- a/eat.html
+++ b/eat.html
@@ -268,27 +268,43 @@ a:hover.back-to-top {
                         <ul class="list-unstyled li-space-lg mb-5">
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"> <a href="#firstweek">09.22 - 09.29 First Week</a></div>
+                            <div class="media-body"> <a href="#firstweek">09.22 - 09.29 1st Week</a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><a href="#secondweek">09.29 - 10.06 Second Week</a></div>
+                            <div class="media-body"><a href="#secondweek">09.29 - 10.06 2nd Week</a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><a href="#thirdweek">10.06 - 10.13 Third Week</a></div>
+                            <div class="media-body"><a href="#thirdweek">10.06 - 10.13 3rd Week</a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><a href="#fourthweek">10.13 - 10.20 Fourth Week</a></div>
+                            <div class="media-body"><a href="#fourthweek">10.13 - 10.20 4th Week</a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><a href="#fifthweek">10.20 - 10.27 Fifth Week</a></div>
+                            <div class="media-body"><a href="#fifthweek">10.20 - 10.27 5th Week</a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
-                            <div class="media-body"><a href="#sixthweek">10.27 - 11.03 Sixth Week</a></div>
+                            <div class="media-body"><a href="#sixthweek">10.27 - 11.03 6th Week</a></div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body"><a href="#7thweek">11.03 - 11.10 7th Week</a></div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body"><a href="#8thweek">11.10 - 11.17 8th Week</a></div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body"><a href="#9thweek">11.17 - 11.24 9th Week</a></div>
+                        </li>
+                        <li class="media">
+                            <i class="fas fa-square"></i>
+                            <div class="media-body"><a href="#10thweek">11.24 - 12.01 10th Week</a></div>
                         </li>
                         <li class="media">
                             <i class="fas fa-square"></i>
@@ -439,6 +455,27 @@ a:hover.back-to-top {
                      </ul>
                   <p class="mb-4">After gathering the list and looking into each and every project, my next step will be to start mapping out the repository website's wireframes and take it from there.</p>
  
+                  <h2 class="mb-4"  id=7thweek>11.03 - 11.10 7th Week</h2>
+                  <p class="mb-4">This week I created the first draft of the website with wordpress.</p>
+
+                  <h2 class="mb-4"  id=8thweek>>11.10 - 11.17 8th Week</h2>
+                  <p class="mb-4">This week I updated the layout of the website after talking to Amy last week. I added the student list on top of the page and also linked project pages/portfolio pages of the students.</p>
+                  <h2 class="mb-4"  id=9thweek>11.17 - 11.24 9th Week</h2>
+                  <p class="mb-4">This week I made a google doc and a google form for students who want to put their work on our page to enter the information about the projects. I did not post in slack yet because I thought thanksgiving is coming up and people might not be checking slack around this time.</p>
+                  <ul class="list-unstyled li-space-lg mb-4">
+                    <li class="media">
+                        <i class="fas fa-square"></i>
+                        <div class="media-body">1. <a href="https://docs.google.com/document/d/11kbfUeROWB1XXvbQSsXX95rv-5AGSiheeJA8quvRXR0/edit?usp=sharing">Google Doc</a></div>
+                    </li>
+                    <li class="media">
+                        <i class="fas fa-square"></i>
+                        <div class="media-body">2. <a href="https://forms.gle/6b8zVMguM91peEMa8">Google Form</a></div>
+                    </li>
+                </ul>
+                  <h2 class="mb-4"  id=10thweek>>11.24 - 12.01 10th Week</h2>
+                  <p class="mb-4">This week I had a great thanksgiving and went to get the booster shot. I did not make much progress but will try to get back on track later this week.</p>
+
+
             <p class="mb-4" style="text-align: center;color: rgb(96, 117, 131);">To be continued...</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
