--- a/eat.html
+++ b/eat.html
@@ -458,7 +458,7 @@ a:hover.back-to-top {
                   <h2 class="mb-4"  id=7thweek>11.03 - 11.10 7th Week</h2>
                   <p class="mb-4">This week I created the first draft of the website with wordpress.</p>
 
-                  <h2 class="mb-4"  id=8thweek>>11.10 - 11.17 8th Week</h2>
+                  <h2 class="mb-4"  id=8thweek>11.10 - 11.17 8th Week</h2>
                   <p class="mb-4">This week I updated the layout of the website after talking to Amy last week. I added the student list on top of the page and also linked project pages/portfolio pages of the students.</p>
                   <h2 class="mb-4"  id=9thweek>11.17 - 11.24 9th Week</h2>
                   <p class="mb-4">This week I made a google doc and a google form for students who want to put their work on our page to enter the information about the projects. I did not post in slack yet because I thought thanksgiving is coming up and people might not be checking slack around this time.</p>
@@ -472,7 +472,7 @@ a:hover.back-to-top {
                         <div class="media-body">2. <a href="https://forms.gle/6b8zVMguM91peEMa8">Google Form</a></div>
                     </li>
                 </ul>
-                  <h2 class="mb-4"  id=10thweek>>11.24 - 12.01 10th Week</h2>
+                  <h2 class="mb-4"  id=10thweek>11.24 - 12.01 10th Week</h2>
                   <p class="mb-4">This week I had a great thanksgiving and went to get the booster shot. I did not make much progress but will try to get back on track later this week.</p>
 
 
